[project]
name = "medical-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.10.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
